# LeagueModel

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  DESIGN_KR.md  config.ini.sample  wad_browser.py  web.http
cache/: imgui.ini
src/: animation.cpp  character.cpp  character.hpp  main.cpp  managed_image.cpp  managed_image.hpp  ui.cpp
src/app/: gl_app.cpp  gl_app.hpp  league_model_app.cpp  league_model_app.hpp
src/render/: character_pose.hpp  character_renderer.cpp  character_renderer.hpp  gl_shader.cpp  gl_shader.hpp  orbit_camera.cpp  orbit_camera.hpp
